Post Editor: Prevent popover from being hidden by metabox

--- a/packages/edit-post/src/components/layout/style.scss
+++ b/packages/edit-post/src/components/layout/style.scss
@@ -3,6 +3,11 @@
 	clear: both;
 }
 
+.edit-post-layout .interface-interface-skeleton__body {
+	// Make this a stacking context to contain the z-index of children elements.
+	isolation: isolate;
+}
+
 // Adjust the position of the notices
 .components-editor-notices__snackbar {
 	position: fixed;
