--- a/packages/edit-site/src/components/editor/style.scss
+++ b/packages/edit-site/src/components/editor/style.scss
@@ -3,6 +3,11 @@
 	transition: opacity 0.1s ease-out;
 	@include reduce-motion("transition");
 
+	.interface-interface-skeleton__body {
+		// Make this a stacking context to contain the z-index of children elements.
+		isolation: isolate;
+	}
+
 	&.is-loading {
 		opacity: 0;
 	}
